# finsum

./: .gitignore  LICENSE  README.md  TODO.md  __init__.py  facade.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
chunking/: __init__.py  datatypes.py  pipeline.py  text_chunker.py
config/: __init__.py  settings.json
finsum/: __init__.py  facade.py
finsum/chunking/: __init__.py  block_segmenter.py  pipeline.py  text_chunker.py
finsum/config/: __init__.py  settings.json  settings.py
finsum/inference/: language_model.py
finsum/ingestion/: __init__.py  downloader.py
finsum/retrieval/: __init__.py  reranker.py  retriever.py
finsum/storage/: __init__.py  memory.py
inference/: __init__.py  language_model.py
ingestion/: __init__.py
scripts/: main.py
storage/: __init__.py  memory.py
tests/: __init__.py  conftest.py  test_components.py  test_integration.py
